docs: comprehensively update README and package.json metadata
- Update package.json repository URL and author
- Rewrite README with accurate plugin architecture details
- Add comprehensive API reference with all endpoints
- Document actual rendering backend (Chromium via go-rod)
- Add detailed troubleshooting section
- Update all GitHub URLs to correct repository
- Add architecture diagrams for frontend and backend
- Document database schema and data models
- Include development, testing, and contribution guidelines

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/yourusername/sheduled-reports-app"
+    "url": "https://github.com/FulgerX2007/grafana-scheduled-reports-app"
   },
-  "author": "Your Organization",
+  "author": "Andrian Iliev",
   "license": "Apache-2.0",
   "devDependencies": {
     "@grafana/data": "^12.2.0",
