feat: enable report download when SMTP is not configured
- Add email_sent and email_error fields to Run model to track email delivery status separately from report generation
- Modify scheduler to save artifact to database immediately after generation, before attempting email delivery
- Update database with email status after each email attempt (not configured, failed, or sent)
- Enhance Run History UI to display email delivery status with clear indicators
- Make download button primary (highlighted) when email was not sent to draw user attention
- Add "(download available)" text in email status column when report is ready but email was not sent

This allows users to download generated reports even when:
- SMTP is not configured in plugin settings
- SMTP credentials are invalid or server is unreachable
- Email delivery fails for any reason

Reports are now always accessible via download, with email delivery being optional.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: sheduled-reports-app
+      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: scheduled-reports-app
       # Rendering now handled by plugin with embedded Chromium
       GF_LOG_LEVEL: debug
       GF_DEFAULT_APP_MODE: development
@@ -23,8 +23,9 @@ services:
       GF_SMTP_FROM_NAME: ${GF_SMTP_FROM_NAME:-Grafana Reports}
       GF_SMTP_SKIP_VERIFY: true
     volumes:
-      - ./dist:/var/lib/grafana/plugins/sheduled-reports-app
+      - ./dist:/var/lib/grafana/plugins/scheduled-reports-app
       - grafana-storage:/var/lib/grafana
+      - ./provisioning:/etc/grafana/provisioning
     # Install Chromium for plugin rendering
     user: root
     entrypoint: >
