--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,19 +74,19 @@ jobs:
           file dist/gpx_reporting_linux_amd64
 
           # Create platform-specific package directory
-          mkdir -p ci/packages/sheduled-reports-app
+          mkdir -p ci/packages/scheduled-reports-app
 
           # Copy only the files we need (excluding platform-specific binaries)
-          rsync -av --exclude='gpx_reporting_*' dist/ ci/packages/sheduled-reports-app/
-          rsync -av dist/gpx_reporting_linux_amd64 ci/packages/sheduled-reports-app/gpx_reporting_linux_amd64
+          rsync -av --exclude='gpx_reporting_*' dist/ ci/packages/scheduled-reports-app/
+          rsync -av dist/gpx_reporting_linux_amd64 ci/packages/scheduled-reports-app/gpx_reporting_linux_amd64
 
           # Verify package contents
           echo "=== Package contents ==="
-          ls -lh ci/packages/sheduled-reports-app/ | grep gpx || echo "No gpx_reporting found!"
+          ls -lh ci/packages/scheduled-reports-app/ | grep gpx || echo "No gpx_reporting found!"
 
           # Create archive
           cd ci/packages
-          zip -r ../../sheduled-reports-app-${{ steps.version.outputs.version }}.linux-amd64.zip sheduled-reports-app
+          zip -r ../../scheduled-reports-app-${{ steps.version.outputs.version }}.linux-amd64.zip scheduled-reports-app
 
           # Clean up for next platform
           cd ../..
@@ -99,14 +99,14 @@ jobs:
           chmod +x dist/gpx_reporting
 
           # Create platform-specific package directory
-          mkdir -p ci/packages/sheduled-reports-app
+          mkdir -p ci/packages/scheduled-reports-app
 
           # Copy only the files we need (excluding platform-specific binaries)
-          rsync -av --exclude='gpx_reporting_*' dist/ ci/packages/sheduled-reports-app/
+          rsync -av --exclude='gpx_reporting_*' dist/ ci/packages/scheduled-reports-app/
 
           # Create archive
           cd ci/packages
-          zip -r ../../sheduled-reports-app-${{ steps.version.outputs.version }}.linux-arm64.zip sheduled-reports-app
+          zip -r ../../scheduled-reports-app-${{ steps.version.outputs.version }}.linux-arm64.zip scheduled-reports-app
 
           # Clean up for next platform
           cd ../..
@@ -120,14 +120,14 @@ jobs:
           chmod +x dist/gpx_reporting
 
           # Create platform-specific package directory
-          mkdir -p ci/packages/sheduled-reports-app
+          mkdir -p ci/packages/scheduled-reports-app
 
           # Copy only the files we need (excluding platform-specific binaries)
-          rsync -av --exclude='gpx_reporting_*' dist/ ci/packages/sheduled-reports-app/
+          rsync -av --exclude='gpx_reporting_*' dist/ ci/packages/scheduled-reports-app/
 
           # Create archive
           cd ci/packages
-          zip -r ../../sheduled-reports-app-${{ steps.version.outputs.version }}.darwin-amd64.zip sheduled-reports-app
+          zip -r ../../scheduled-reports-app-${{ steps.version.outputs.version }}.darwin-amd64.zip scheduled-reports-app
 
           # Clean up for next platform
           cd ../..
@@ -141,14 +141,14 @@ jobs:
           chmod +x dist/gpx_reporting
 
           # Create platform-specific package directory
-          mkdir -p ci/packages/sheduled-reports-app
+          mkdir -p ci/packages/scheduled-reports-app
 
           # Copy only the files we need (excluding platform-specific binaries)
-          rsync -av --exclude='gpx_reporting_*' dist/ ci/packages/sheduled-reports-app/
+          rsync -av --exclude='gpx_reporting_*' dist/ ci/packages/scheduled-reports-app/
 
           # Create archive
           cd ci/packages
-          zip -r ../../sheduled-reports-app-${{ steps.version.outputs.version }}.darwin-arm64.zip sheduled-reports-app
+          zip -r ../../scheduled-reports-app-${{ steps.version.outputs.version }}.darwin-arm64.zip scheduled-reports-app
 
           # Clean up
           cd ../..
@@ -156,7 +156,7 @@ jobs:
 
       - name: Generate checksums
         run: |
-          sha256sum sheduled-reports-app-*.zip > checksums.txt
+          sha256sum scheduled-reports-app-*.zip > checksums.txt
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -168,14 +168,14 @@ jobs:
             ### Installation
 
             Download the appropriate archive for your platform:
-            - **Linux (amd64)**: `sheduled-reports-app-${{ steps.version.outputs.version }}.linux-amd64.zip`
-            - **Linux (arm64)**: `sheduled-reports-app-${{ steps.version.outputs.version }}.linux-arm64.zip`
-            - **macOS (Intel)**: `sheduled-reports-app-${{ steps.version.outputs.version }}.darwin-amd64.zip`
-            - **macOS (Apple Silicon)**: `sheduled-reports-app-${{ steps.version.outputs.version }}.darwin-arm64.zip`
+            - **Linux (amd64)**: `scheduled-reports-app-${{ steps.version.outputs.version }}.linux-amd64.zip`
+            - **Linux (arm64)**: `scheduled-reports-app-${{ steps.version.outputs.version }}.linux-arm64.zip`
+            - **macOS (Intel)**: `scheduled-reports-app-${{ steps.version.outputs.version }}.darwin-amd64.zip`
+            - **macOS (Apple Silicon)**: `scheduled-reports-app-${{ steps.version.outputs.version }}.darwin-arm64.zip`
 
             **1. Extract the archive to your Grafana plugins directory:**
             ```bash
-            unzip sheduled-reports-app-${{ steps.version.outputs.version }}.<platform>.zip -d /var/lib/grafana/plugins/
+            unzip scheduled-reports-app-${{ steps.version.outputs.version }}.<platform>.zip -d /var/lib/grafana/plugins/
             ```
 
             **2. Configure Grafana to allow unsigned plugins:**
@@ -183,12 +183,12 @@ jobs:
             Add to your Grafana configuration file (`grafana.ini` or `custom.ini`):
             ```ini
             [plugins]
-            allow_loading_unsigned_plugins = sheduled-reports-app
+            allow_loading_unsigned_plugins = scheduled-reports-app
             ```
 
             Or set the environment variable:
             ```bash
-            GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=sheduled-reports-app
+            GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS=scheduled-reports-app
             ```
 
             **3. Restart Grafana to load the plugin.**
@@ -196,7 +196,7 @@ jobs:
             ### Checksums
             See `checksums.txt` for SHA256 checksums of all archives.
           files: |
-            sheduled-reports-app-*.zip
+            scheduled-reports-app-*.zip
             checksums.txt
           draft: false
           prerelease: false
