--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,15 +41,20 @@ services:
       GF_SMTP_FROM_ADDRESS: ${GF_SMTP_FROM_ADDRESS:-noreply@example.com}
       GF_SMTP_FROM_NAME: ${GF_SMTP_FROM_NAME:-Grafana Reports}
       GF_SMTP_SKIP_VERIFY: true
+      # Playwright configuration - use writable directories
+      PLAYWRIGHT_BROWSERS_PATH: /tmp/.playwright-cache
+      PLAYWRIGHT_DRIVER_PATH: /tmp/.playwright-driver
     volumes:
       - ./dist:/var/lib/grafana/plugins/scheduled-reports-app
       - grafana-storage:/var/lib/grafana
       - ./provisioning:/etc/grafana/provisioning
-    # Install Chromium for plugin rendering
+    # Install dependencies for Playwright rendering
     user: root
     entrypoint: >
       /bin/sh -c "
       apk add --no-cache chromium su-exec &&
+      mkdir -p /tmp/.playwright-cache /tmp/.playwright-driver &&
+      chmod 777 /tmp/.playwright-cache /tmp/.playwright-driver &&
       exec su-exec grafana /run.sh
       "
 
