--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,20 +41,15 @@ services:
       GF_SMTP_FROM_ADDRESS: ${GF_SMTP_FROM_ADDRESS:-noreply@example.com}
       GF_SMTP_FROM_NAME: ${GF_SMTP_FROM_NAME:-Grafana Reports}
       GF_SMTP_SKIP_VERIFY: true
-      # Playwright configuration - use writable directories
-      PLAYWRIGHT_BROWSERS_PATH: /tmp/.playwright-cache
-      PLAYWRIGHT_DRIVER_PATH: /tmp/.playwright-driver
     volumes:
       - ./dist:/var/lib/grafana/plugins/scheduled-reports-app
       - grafana-storage:/var/lib/grafana
       - ./provisioning:/etc/grafana/provisioning
-    # Install dependencies for Playwright rendering
+    # Install Chromium for PDF rendering
     user: root
     entrypoint: >
       /bin/sh -c "
       apk add --no-cache chromium su-exec &&
-      mkdir -p /tmp/.playwright-cache /tmp/.playwright-driver &&
-      chmod 777 /tmp/.playwright-cache /tmp/.playwright-driver &&
       exec su-exec grafana /run.sh
       "
 
