feat: auto-update plugin version from Git tag during release
Add build step to dynamically update version in plugin.json and
package.json from the Git tag. This ensures the plugin version
always matches the release tag (e.g., tag v1.0.0 sets version 1.0.0).

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,14 @@ jobs:
       - name: Install frontend dependencies
         run: npm ci
 
+      - name: Update plugin version
+        run: |
+          # Update version in plugin.json
+          sed -i 's/"version": "[^"]*"/"version": "${{ steps.version.outputs.version }}"/' src/plugin.json
+          # Update version in package.json
+          sed -i 's/"version": "[^"]*"/"version": "${{ steps.version.outputs.version }}"/' package.json
+          echo "Updated plugin version to ${{ steps.version.outputs.version }}"
+
       - name: Build frontend
         run: npm run build
 
