refactor: apply code formatting and standardize indentation
- Convert tabs to spaces for consistent formatting
- Organize imports in alphabetical order
- Update import paths to match repository structure
- Standardize code style across backend and frontend files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: scheduled-reports-app
+      GF_PLUGINS_ALLOW_LOADING_UNSIGNED_PLUGINS: fulgerx2007-scheduledreports-app
       # Rendering now handled by plugin with embedded Chromium
       GF_LOG_LEVEL: debug
       GF_DEFAULT_APP_MODE: development
@@ -42,7 +42,7 @@ services:
       GF_SMTP_FROM_NAME: ${GF_SMTP_FROM_NAME:-Grafana Reports}
       GF_SMTP_SKIP_VERIFY: true
     volumes:
-      - ./dist:/var/lib/grafana/plugins/scheduled-reports-app
+      - ./dist:/var/lib/grafana/plugins/fulgerx2007-scheduledreports-app
       - grafana-storage:/var/lib/grafana
       - ./provisioning:/etc/grafana/provisioning
     # Install Chromium for PDF rendering
